@@ -22,12 +22,13 @@ import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.StringContains.containsString;
 
 import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
-import com.google.common.collect.ImmutableMap;
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.StandardCopyOption;
+import java.util.Map;
+import org.apache.commons.io.file.PathUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.hamcrest.MatcherAssert;
 import org.junit.Rule;
@@ -79,7 +80,7 @@ public class TestConfigSets extends SolrTestCaseJ4 {
       container = setupContainer(TEST_PATH().resolve("configsets").toString());
       Path solrHome = Paths.get(container.getSolrHome());
 
-      SolrCore core1 = container.create("core1", ImmutableMap.of("configSet", "configset-2"));
+      SolrCore core1 = container.create("core1", Map.of("configSet", "configset-2"));
       MatcherAssert.assertThat(core1.getCoreDescriptor().getName(), is("core1"));
       MatcherAssert.assertThat(
           Paths.get(core1.getDataDir()).toString(),
@@ -98,7 +99,7 @@ public class TestConfigSets extends SolrTestCaseJ4 {
               Exception.class,
               "Expected core creation to fail",
               () -> {
-                container.create("core1", ImmutableMap.of("configSet", "nonexistent"));
+                container.create("core1", Map.of("configSet", "nonexistent"));
               });
       Throwable wrappedException = getWrappedException(thrown);
       MatcherAssert.assertThat(wrappedException.getMessage(), containsString("nonexistent"));
@@ -110,27 +111,28 @@ public class TestConfigSets extends SolrTestCaseJ4 {
   @Test
   public void testConfigSetOnCoreReload() throws IOException {
     Path testDirectory = createTempDir("core-reload");
-    File configSetsDir = new File(testDirectory.toFile(), "configsets");
+    Path configSetsDir = testDirectory.resolve("configsets");
 
-    FileUtils.copyDirectory(getFile("solr/configsets"), configSetsDir);
+    PathUtils.copyDirectory(getFile("solr/configsets").toPath(), configSetsDir);
 
-    String csd = configSetsDir.getAbsolutePath();
+    String csd = configSetsDir.toAbsolutePath().toString();
     System.setProperty("configsets", csd);
 
     CoreContainer container = new CoreContainer(SolrXmlConfig.fromString(testDirectory, solrxml));
     container.load();
 
     // We initially don't have a /dump handler defined
-    SolrCore core = container.create("core1", ImmutableMap.of("configSet", "configset-2"));
+    SolrCore core = container.create("core1", Map.of("configSet", "configset-2"));
     MatcherAssert.assertThat(
         "No /dump handler should be defined in the initial configuration",
         core.getRequestHandler("/dump"),
         is(nullValue()));
 
     // Now copy in a config with a /dump handler and reload
-    FileUtils.copyFile(
-        getFile("solr/collection1/conf/solrconfig-withgethandler.xml"),
-        new File(new File(configSetsDir, "configset-2/conf"), "solrconfig.xml"));
+    Files.copy(
+        getFile("solr/collection1/conf/solrconfig-withgethandler.xml").toPath(),
+        configSetsDir.resolve("configset-2/conf").resolve("solrconfig.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
     container.reload("core1");
 
     core = container.getCore("core1");
